--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,8 @@
 /*------------------------------------------------------------------------------------------ШРИФТЫ*/
-@font-face {
+/*@font-face {
 	font-family: DeutschGothic;
 	src: url("../font/DeutschGothic.ttf");
-}
+}*/
 @font-face {
 	font-family: ComfortaaLight;
 	src: url("../font/Comfortaa-Light.ttf");
@@ -43,7 +43,6 @@
     transform: none;
   }
 }
-
 @keyframes bounceInLeft {
   from, 60%, 75%, 90%, to {
     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
@@ -71,7 +70,17 @@
     transform: none;
   }
 }
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
 
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
 @keyframes pulse {
   from, 50%, to {
     transform: scale(1);
@@ -81,29 +90,28 @@
     transform: scale(1.1);
   }
 }
-
 /*------------------------------------------------------------------------------------------BODY*/
 body{
+	max-width: 100%;
 	margin: 0;
 	font-family: ComfortaaRegular;
 	font-size: 16px;
 }
 .welcome {
 	width: 100%;
-	height: 400px;
+	height: 500px;
 }
 .welcome .p1{
-	font-family: DeutschGothic;
+	font-family: ComfortaaBold;
 	text-align: center;
 	font-size: 130px;
 	color: tomato;
 	margin: 0 auto;
 	padding-top: 30px;
 	text-shadow: 1px 1px 2px black; 
-	animation: bounceInDown 1.5s;
+	animation: bounceInDown 1.7s;
 }
 .welcome .p2{
-	font-family: DeutschGothic;
 	text-align: center;
 	font-size: 100px;
 	color: tomato;
@@ -128,8 +136,53 @@ body{
 	animation: bounceInLeft 1.5s;
 }
 #testfield {
+	position: relative;
 	width: 100%;
-	min-height: 1000px;
+	height: 2500px;
+	overflow: hidden;
+	animation: fadeInUp 2s;
+}
+.panel {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	font-size: 40px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	opacity: .5;
+	transition: .2s;
+	transform: scale(0.74);
+}
+.trans {
+	opacity: 1;
+	transform: scale(1);
+	transition: .4s;
+}
+.un{
+	background-color: #0050A4;
+	color: white;
+}
+.deux{
+	display: none;
+	background-color: white;
+	color: #0050A4;
+	box-shadow: 1px 1px 20px black;
+	transform: translate3d(-100%, 0, 0);
+}
+.trois{
+	display: none;
+	background-color: #EF4135;
+	color: white;
+	box-shadow: 1px 1px 20px black;
+	transform: translate3d(100%, 0, 0);
+}
+.quatre{
+	display: none;
+	background-color: white;
+	color: #0050A4;
+	transform: translate3d( 0, -100%, 0);
 }
 /*------------------------------------------------------------------------------------------ПОДВАЛ*/
 footer{
