--- a/style/main.css
+++ b/style/main.css
@@ -98,6 +98,7 @@ body{
 	font-size: 16px;
 }
 .welcome {
+	margin-top: 150px;
 	width: 100%;
 	height: 500px;
 }
@@ -148,9 +149,8 @@ body{
     height: 100%;
     padding-top: 0px;
     /*padding-bottom: 2650px;*/
-    height: 3100px;
+    height: 4200px;
 	overflow: hidden;
-	animation: fadeInUp 2s;
 }
 .box {
 	position: relative;
@@ -170,11 +170,11 @@ body{
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
-	font-size: 40px;
+	font-size: 50px;
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	
+	box-shadow: 0px 0px 20px black;
 }
 .trans {
 	opacity: 1;
@@ -188,21 +188,25 @@ body{
 	display: none;
 	background-color: white;
 	color: #0050A4;
-	box-shadow: 1px 1px 20px black;
 	transform: translate3d(-100%, 0, 0);
 }
 .trois{
 	display: none;
 	background-color: #EF4135;
 	color: white;
-	box-shadow: 1px 1px 20px black;
 	transform: translate3d(100%, 0, 0);
 }
 .quatre{
 	display: none;
-	background-color: white;
-	color: #0050A4;
+	background-color: #0050A4;
+	color: white;
 	transform: translate3d( 0, -100%, 0);
+}
+.cinq{
+	display: none;
+	background-color: white;
+	color: black;
+	transform: translate3d( 0, 100%, 0);
 }
 /*------------------------------------------------------------------------------------------ПОДВАЛ*/
 footer{
@@ -234,4 +238,7 @@ footer div a:hover {
 	text-decoration: none;
 	text-shadow: 1px 1px 1px rgba(0, 32, 53, .4);
 	animation: pulse .6s;
+}
+footer p {
+	font-size: 16px;
 }
