--- a/style/main.css
+++ b/style/main.css
@@ -148,7 +148,7 @@ body{
     width: 100%;
     height: 100%;
     padding-top: 0px;
-    /*padding-bottom: 2650px;*/
+    /*padding-bottom: 4200px;*/
     height: 4200px;
 	overflow: hidden;
 }
@@ -181,32 +181,40 @@ body{
 	transition: .4s;
 }
 .un{
+	/*background-image: url(../img/);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
 	background-color: #0050A4;
 	color: white;
 }
 .deux{
-	display: none;
+	/*background-image: url(../img/);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
 	background-color: white;
 	color: #0050A4;
-	transform: translate3d(-100%, 0, 0);
 }
 .trois{
-	display: none;
+	/*background-image: url(../img/);
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
 	background-color: #EF4135;
 	color: white;
-	transform: translate3d(100%, 0, 0);
 }
 .quatre{
-	display: none;
+	/*background-image: url(../img/);
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
 	background-color: #0050A4;
 	color: white;
-	transform: translate3d( 0, -100%, 0);
 }
 .cinq{
-	display: none;
 	background-color: white;
 	color: black;
-	transform: translate3d( 0, 100%, 0);
 }
 /*------------------------------------------------------------------------------------------ПОДВАЛ*/
 footer{
