--- a/style/main.css
+++ b/style/main.css
@@ -90,6 +90,46 @@
     transform: scale(1.1);
   }
 }
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+ 	}
+ 	to {
+ 		transform: rotate(360deg);
+ 	}
+ }
+/*------------------------------------------------------------------------------------------PRELOADER*/
+.preloader{
+	display: flex;
+	position: fixed;
+ 	z-index: 2;
+ 	object-fit: contain;
+ 	flex-direction: column;
+ 	justify-content: center;
+ 	align-items: center;
+ 	width: 100%; 
+    height: 100%;
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    transition: .5s all;
+    opacity: 1;
+    visibility: visible;
+}
+.loader{
+	width: 50px;
+    height: 50px;
+    border: 5px solid white;
+    border-top-color: #0050A4;
+    border-radius: 50%;
+    animation: spin .3s infinite linear;
+}
+.done{ 
+	opacity: 0;
+	visibility: hidden;
+}
 /*------------------------------------------------------------------------------------------BODY*/
 body{
 	max-width: 100%;
@@ -98,7 +138,7 @@ body{
 	font-size: 16px;
 }
 .welcome {
-	margin-top: 150px;
+	margin-top: 100px;
 	width: 100%;
 	height: 500px;
 }
@@ -148,8 +188,8 @@ body{
     width: 100%;
     height: 100%;
     padding-top: 0px;
-    /*padding-bottom: 4200px;*/
-    height: 4200px;
+    /*height: 4200px;*/
+    height: 4400px;
 	overflow: hidden;
 }
 .box {
